<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.RegisterServiceActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            style="@style/Logo"
            android:contentDescription="@string/txt_description_image"
            android:src="@mipmap/ic_logo_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        style="@style/TextViewTitle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/register_service_title"
        app:layout_constraintBottom_toTopOf="@+id/register_service_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_service_name"
        style="@style/TextBox"
        android:layout_margin="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/register_service_name"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/register_sevice_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_service_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textNoSuggestions"
            android:maxLength="15"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_sevice_price"
        style="@style/TextBox"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/register_service_price"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_service_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_service_price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal|textNoSuggestions"
            android:maxLength="11"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_title_radio_group"
        style="@style/TitleRadioGroup"
        android:text="@string/register_service_mobility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_sevice_price" />

    <!-- ========= REGISTER SERVICE RADIO GROUP ========= -->
    <RadioGroup
        android:id="@+id/radioGroup"
        style="@style/RadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_radio_group">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_register_service_yes"
            style="@style/RadioButton"
            android:text="@string/register_service_radio_yes"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_register_service_no"
            style="@style/RadioButton"
            android:text="@string/register_service_radio_no"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_service_price_ticket"
        style="@style/TextBox"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/register_service_price_ticket"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_service_price_ticket_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal|textNoSuggestions"
            android:maxLength="11"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_register_service_type_contact"
        style="@style/TitleRadioGroup"
        android:text="@string/register_service_type_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_service_price_ticket" />

    <!-- ========= REGISTER SERVICE RADIO GROUP ========= -->
    <RadioGroup
        android:id="@+id/radio_group_type_contact"
        style="@style/RadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_register_service_type_contact">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_register_service_whatsapp"
            style="@style/RadioButton"
            android:layout_width="180dp"
            android:text="@string/register_service_radio_whatsapp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_register_service_email"
            style="@style/RadioButton"
            android:text="@string/register_service_radio_email"/>

    </RadioGroup>

        <!-- ========= REGISTER USER BUTTON ========= -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_service"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btn_color"
        android:onClick="registerService"
        android:text="@string/btn_register_service"
        android:textColor="@color/txt_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_type_contact" />


</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>