<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.LearnSubjectActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_logo"
            style="@style/Logo"
            android:contentDescription="@string/txt_description_image"
            android:src="@mipmap/ic_logo_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            style="@style/TextViewTitle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/register_service_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/learn_subject_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10sp"
            android:singleLine="true"
            android:text="@string/learn_subject_title"
            android:textAllCaps="true"
            android:textColor="#EFEBE9"
            android:textSize="10pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/link_marmitex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_marmitex"
            android:textColorLink="@color/title_main"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/learn_subject_title" />

        <TextView
            android:id="@+id/link_summer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_summer"
            android:textColorLink="@color/title_main"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/link_marmitex" />

        <TextView
            android:id="@+id/link_revenda_produtos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/link_revenda_produtos"
            android:textColorLink="@color/title_main"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/link_summer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>